# 277-probabilistic-forecasting

./: README.md  README.ru.md  README.specify.md  readme.simple.md  readme.simple.ru.md
python/: backtest.py  config.yaml  data_fetcher.py  features.py  requirements.txt  scoring.py  strategy.py
python/examples/: run_backtest.py  train_model.py
python/models/: __init__.py  deepar.py  mixture_density.py  quantile_regression.py
rust_probabilistic/: Cargo.toml
rust_probabilistic/benches/: probabilistic_bench.rs
rust_probabilistic/examples/: backtest.rs  fetch_data.rs  kelly_sizing.rs  quantile_forecast.rs  scoring_rules.rs
rust_probabilistic/src/: lib.rs
rust_probabilistic/src/api/: client.rs  mod.rs  types.rs
rust_probabilistic/src/backtest/: engine.rs  mod.rs  report.rs
rust_probabilistic/src/distributions/: forecast.rs  gaussian.rs  mod.rs  student_t.rs
rust_probabilistic/src/models/: features.rs  mod.rs  quantile.rs
rust_probabilistic/src/scoring/: calibration.rs  crps.rs  log_score.rs  mod.rs
rust_probabilistic/src/strategy/: kelly.rs  mod.rs  probabilistic.rs  signal.rs
