[package]
name = "probabilistic_forecasting"
version = "0.1.0"
edition = "2021"
description = "Probabilistic forecasting for cryptocurrency trading using Bybit data"
authors = ["ML Trading Examples"]
license = "MIT"
keywords = ["trading", "crypto", "probabilistic-forecasting", "quantile-regression", "deep-learning"]

[lib]
name = "probabilistic_forecasting"
path = "src/lib.rs"

# ═══════════════════════════════════════════════════════════════════════════════
# EXAMPLES
# ═══════════════════════════════════════════════════════════════════════════════

[[example]]
name = "fetch_data"
path = "examples/fetch_data.rs"

[[example]]
name = "quantile_forecast"
path = "examples/quantile_forecast.rs"

[[example]]
name = "backtest"
path = "examples/backtest.rs"

[[example]]
name = "kelly_sizing"
path = "examples/kelly_sizing.rs"

[[example]]
name = "scoring_rules"
path = "examples/scoring_rules.rs"

# ═══════════════════════════════════════════════════════════════════════════════
# DEPENDENCIES
# ═══════════════════════════════════════════════════════════════════════════════

[dependencies]
# HTTP client for API requests
reqwest = { version = "0.11", features = ["json", "blocking"] }

# JSON serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Linear algebra and numerical computing
ndarray = { version = "0.15", features = ["serde"] }
ndarray-stats = "0.5"

# Statistics
statrs = "0.16"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Environment variables
dotenv = "0.15"

# Logging
log = "0.4"
env_logger = "0.10"
tracing = "0.1"
tracing-subscriber = "0.3"

# CSV for data export/import
csv = "1.3"

# Random number generation
rand = "0.8"
rand_distr = "0.4"

# HMAC for API authentication (Bybit requires signature)
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# WebSocket for real-time data
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"

# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }

# Ordered float for comparisons
ordered-float = "4.2"

# UUID for unique identifiers
uuid = { version = "1.6", features = ["v4"] }

# Pretty printing and tables
tabled = "0.15"
colored = "2.1"

# Progress bars
indicatif = "0.17"

# Rayon for parallel processing
rayon = "1.8"

# Float comparisons
approx = "0.5"

[dev-dependencies]
criterion = "0.5"
tokio-test = "0.4"

[[bench]]
name = "probabilistic_bench"
harness = false

[features]
default = []
cuda = []  # Optional CUDA support for GPU acceleration
